--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "mod-18-social-network-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "Social Network API that uses NoSQL to handle large amounts of unstructured data.",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index",
+    "dev": "nodemon index",
+    "seed": "node utils/seed"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "moment": "^2.29.4",
-    "mongoose": "^7.5.2"
+    "express": "^4.17.1",
+    "mongoose": "^7.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.9"
   }
 }
