--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "mod-18-social-network-api",
   "version": "1.0.0",
   "description": "Social Network API that uses NoSQL to handle large amounts of unstructured data.",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
-    "seed": "node utils/seed"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
