--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mod-18-social-network-api",
   "version": "1.0.0",
   "description": "Social Network API that uses NoSQL to handle large amounts of unstructured data.",
-  "main": "server.js",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js",
+    "start": "node index",
     "dev": "nodemon server.js"
   },
   "dependencies": {
